[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Weapons/turret.gd" type="Script" id=1]
[ext_resource path="res://Assets/Skorpio with modifications/Turret.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[sub_resource type="CircleShape2D" id=2]
radius = 288.064

[node name="turret" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -6 )

[node name="range" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2147484671

[node name="range_shape" type="CollisionShape2D" parent="range"]
shape = SubResource( 1 )

[node name="view" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 1023

[node name="range_shape" type="CollisionShape2D" parent="view"]
shape = SubResource( 2 )

[node name="muzzle_positions" type="Node2D" parent="."]

[node name="muzzle_pos" type="Position2D" parent="muzzle_positions"]
position = Vector2( -2.49741, -21.0051 )

[node name="muzzle_pos2" type="Position2D" parent="muzzle_positions"]
position = Vector2( 2.62103, -20.966 )

[node name="reload" type="Timer" parent="."]

[node name="reload_magazine" type="Timer" parent="."]

[connection signal="area_entered" from="range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="range" to="." method="_on_range_area_exited"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="area_entered" from="view" to="." method="_on_view_area_entered"]
[connection signal="area_exited" from="view" to="." method="_on_view_area_exited"]
[connection signal="body_entered" from="view" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="view" to="." method="_on_view_body_exited"]
[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
[connection signal="timeout" from="reload_magazine" to="." method="_on_reload_magazine_timeout"]
